syntax = "proto3";

option go_package = "github.com/buemura/minibank/packages/gen/protos";

message Transaction {
    string id = 1;
    string account_id = 2;
    optional string destination_account_id = 3;
    int64 amount = 4;
    string status = 5;
    string transaction_type = 6;
    string created_at = 7;
    string updated_at = 8;
}

message GetTransactionsRequest {
    string account_id = 1;
    int32 page = 2;
    int32 items = 3;
}

message GetTransactionsResponse {
    message Meta {
        int32 page = 1;
        int32 items = 2;
        int32 total_pages = 3;
        int32 total_items = 4;
    }

    repeated Transaction data = 1;
    // Meta meta = 2;
}

message CreateTransactionRequest {
    string account_id = 1;
    optional string destination_account_id = 2;
    int64 amount = 3;
    string transaction_type = 4;
}

service TransactionService {
    rpc getTransactions(GetTransactionsRequest) returns (GetTransactionsResponse) {};
    rpc createTransaction(CreateTransactionRequest) returns (Transaction) {};
}